<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aec12e.opencvtut.chooser"
    android:background="@color/colorPrimaryDark">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startmatch"
        android:id="@+id/chooser_go"
        android:layout_below="@+id/p2badge"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:visibility="invisible"
        android:onClick="startCamera" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/p1is"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="20dp" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/p1badge"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/p2is"
        android:id="@+id/textView2"
        android:textColor="#ffffff"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/p1badge"
        android:layout_marginBottom="20dp" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/p2badge"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>
