<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aec12e.opencvtut.winner_screen"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/winner_text"
        android:textColor="#FFFFFF"
        android:textSize="35dp"
        android:text="wesdsdsd"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="194dp"
        android:textAlignment="center"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/winner_icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newmatch"
        android:id="@+id/restart"
        android:onClick="restartGame"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="140dp"
        android:id="@+id/imageView"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/winner_text"
        android:layout_toStartOf="@+id/winner_icon"
        android:src="@mipmap/evenie" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="140dp"
        android:id="@+id/imageView2"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/winner_icon"
        android:src="@mipmap/oddie"
        android:cropToPadding="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/player1"
        android:id="@+id/textView3"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/imageView"
        android:layout_toStartOf="@+id/restart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/player2"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/textView3"
        android:layout_toEndOf="@+id/restart"
        android:textColor="#FFFFFF" />
</RelativeLayout>
